apps/hivewiki-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivewiki-web
  labels:
    app: hivewiki-web
    app.kubernetes.io/name: hivewiki-web
    app.kubernetes.io/part-of: hivewiki
spec:
  selector:
    app: hivewiki-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
